# yolo_api

./: Makefile  README.md  cmds  gpu_compilation.txt
cfg/: yolov3-tiny.cfg
darknet_cpp/: CMakeLists.txt
darknet_cpp/examples/: CMakeLists.txt  darknet_cpp_detection.cpp  darknet_cpp_detection_threaded.cpp  darknet_cpp_identifier.cpp  darknet_cpp_identifier_multibatch.cpp  darknet_cpp_jetson_detection.cpp  reproduce_leak.cpp
darknet_cpp/src/: CMakeLists.txt  convert_cv.hpp  darknet.hpp  detection.hpp  detector.cpp  detector.hpp  exports.cpp  identifier.cpp  identifier.hpp  predictor.cpp  predictor.hpp  predictor_impl.cpp  predictor_impl.hpp  preprocess_cv.cpp  preprocess_cv.hpp  utils.cpp  utils.hpp
examples/: classifier.c  detector.c  segmenter.c
include/: darknet.h
python/: gen_anchors.py
src/: box.c  box.h  cuda.c  cuda.h  data.c  demo.c  image.c  image_opencv.cpp  layer.c  network.c  parser.c  pruning.c  pruning.h  utils.c  yolo_layer.c
